# acc

./: .gitignore  CMakeLists.txt  acc.sln  acc.vcxproj  acc.vcxproj.filters  parse.c  strlist.c
.github/workflows/: continuous_integration.yml  vsdevcmd.bat
acc.xcodeproj/: project.pbxproj
acc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
